Fix navbar on mobiles opening

--- a/src/CSS/Navbar.scss
+++ b/src/CSS/Navbar.scss
@@ -13,9 +13,10 @@
   backdrop-filter: blur(5px);
   transition: transform 0.5s;
   height: 60px;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 2;
+  width: 100%;
 }
 
 .navbar-hidden {
@@ -68,7 +69,7 @@
 
 .navbar-button::before {
   content: "";
-  background-color: $dark-colour;
+  background: $black;
   transition: transform 0.2s cubic-bezier(0.7, 0, 0.2, 1);
 }
 
@@ -104,14 +105,17 @@
   width: 100%;
   height: 100vh;
   background: black;
-  opacity: 0.3;
   position: absolute;
   left: 0;
   top: 60px;
+  transition: visibility 0.2s ease-in-out, opacity 0.2s ease-in-out;
+  visibility: visible;
+  opacity: 0.5;
 }
 
 .bg-tray-hidden {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
 }
 
 .links-container {
@@ -156,5 +160,9 @@
 
   .options-hidden {
     transform: translateX(0);
+  }
+
+  .navbar-button::before {
+    background: $dark-colour;
   }
 }
