--- a/src/CSS/index.scss
+++ b/src/CSS/index.scss
@@ -6,9 +6,14 @@ body {
   background: $black;
   font-family: $main-font;
   font-weight: 400;
-  overflow-x: hidden;
 }
 
 .no-scroll {
   overflow: hidden;
+}
+
+#app-container {
+  overflow-x: hidden;
+  position: relative;
+  margin: 60px 0 0 0;
 }
